Closed Bug 1727914 Opened 5 years ago Closed 5 years ago

Perma build bustage dom/security/nsContentSecurityUtils.cpp:1242:22: error: no matching function for call to 'SmartFormatCrashString' Gecko 93 merges to Beta on 2021-09-06

Categories

(Core :: DOM: Security, defect)

defect

Tracking

()

VERIFIED FIXED
93 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- unaffected
firefox91 --- unaffected
firefox92 --- unaffected
firefox93 --- verified

People

(Reporter: smolnar, Assigned: tjr)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

[task 2021-08-27T11:06:09.762Z] 11:06:09     INFO -    auto crashString = nsContentSecurityUtils::SmartFormatCrashString(
[task 2021-08-27T11:06:09.762Z] 11:06:09     INFO -                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2021-08-27T11:06:09.762Z] 11:06:09     INFO -  /builds/worker/checkouts/gecko/dom/security/nsContentSecurityUtils.cpp:238:35: note: candidate function not viable: no known conversion from 'NS_ConvertUTF16toUTF8' to 'const char *' for 2nd argument
[task 2021-08-27T11:06:09.762Z] 11:06:09     INFO -  nsCString nsContentSecurityUtils::SmartFormatCrashString(
[task 2021-08-27T11:06:09.762Z] 11:06:09     INFO -                                    ^
[task 2021-08-27T11:06:09.762Z] 11:06:09     INFO -  /builds/worker/checkouts/gecko/dom/security/nsContentSecurityUtils.cpp:243:35: note: candidate function not viable: 1st argument ('const char *') would lose const qualifier
[task 2021-08-27T11:06:09.762Z] 11:06:09     INFO -  nsCString nsContentSecurityUtils::SmartFormatCrashString(
[task 2021-08-27T11:06:09.762Z] 11:06:09     INFO -                                    ^
[task 2021-08-27T11:06:09.762Z] 11:06:09     INFO -  /builds/worker/checkouts/gecko/dom/security/nsContentSecurityUtils.cpp:216:31: note: candidate function not viable: requires single argument 'str', but 3 arguments were provided
[task 2021-08-27T11:06:09.762Z] 11:06:09     INFO -  char* nsContentSecurityUtils::SmartFormatCrashString(const char* str) {
[task 2021-08-27T11:06:09.762Z] 11:06:09     INFO -                                ^
[task 2021-08-27T11:06:09.762Z] 11:06:09     INFO -  /builds/worker/checkouts/gecko/dom/security/nsContentSecurityUtils.cpp:220:31: note: candidate function not viable: requires single argument 'str', but 3 arguments were provided
[task 2021-08-27T11:06:09.762Z] 11:06:09     INFO -  char* nsContentSecurityUtils::SmartFormatCrashString(char* str) {
[task 2021-08-27T11:06:09.762Z] 11:06:09     INFO -                                ^
[task 2021-08-27T11:06:09.762Z] 11:06:09     INFO -  1 error generated.```
Flags: needinfo?(bpostelnicu)
Summary: Perma build bustage dom/security/nsContentSecurityUtils.cpp:1242:22: error: no matching function for call to 'SmartFormatCrashString' → Perma build bustage dom/security/nsContentSecurityUtils.cpp:1242:22: error: no matching function for call to 'SmartFormatCrashString' Gecko 93 merges to Beta on 2021-09-06

I think decoder is more suited for this one.

Flags: needinfo?(bpostelnicu) → needinfo?(choller)
Flags: needinfo?(tom)
Regressed by: 1724220
No longer regressed by: 1725145
Has Regression Range: --- → yes

Set release status flags based on info from the regressing bug 1724220

Assignee: nobody → tom
Status: NEW → ASSIGNED
Pushed by tritter@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/8fdcd3d4494a Fix fuzzing build caused by paren error r=decoder
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Status: RESOLVED → VERIFIED
Flags: needinfo?(tom)
Flags: needinfo?(choller)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: