Bug 1727914: Fix fuzzing build caused by paren error r=decoder

Differential Revision: https://phabricator.services.mozilla.com/D123856